# brt-listener-model

./: .gitignore  CMakeLists.txt  README.md  dependencies.cmake
examples/daw/test-brt-listener-44100/: test-brt-listener-44100.RPP
examples/daw/test-brt-listener-44100/Media/peaks/: MusArch_Sample_44.1kHz_Anechoic_FemaleSpeech.wav.reapeaks
examples/pd/: test-listener-model-sofa.pd  test-listener-model.pd
scripts/: readme.txt  setup_brt_run_me_as_admin.bat  setup_mac.sh  setup_pd_mac.sh  setup_pd_win.bat  setup_vst3_mac.sh  setup_win.bat
src/: Model.cpp  Model.hpp  UI.hpp
